CKAD/6. Services & Networking/3. Ingress Networking/Ingress Resources/ingress-wear-watch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-wear
spec:
  rules:
  - host: '*'
    http:
      paths:
      - backend:
          service:
            name: wear-service
            port:
              number: 80
        path: /wear*
        pathType: Exact
      - backend:
          service:
            name: watch-service
            port:
              number: 80
        path: /watch*
        pathType: Exact
status:
  loadBalancer: {}
